# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/workflows/: build.yml  django.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/test/: conftest.py  test_order_serializer_com_produto_inativo.py  test_order_serializer_com_um_produto.py  test_order_serializer_vasio.py  test_order_serializers.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_prince_product_price_remove_category_name_and_more.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/test/: test_categoy_viewset.py  test_product_serializer_com_categoria.py  test_product_serializer_descricao_opcional.py  test_product_serializer_invalido_sem_titulo.py  test_product_serializer_valido.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
