[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Davi Silva de Deus",email = "davisilvadedeus18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
