[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Davi Silva de Deus <davisilvadedeus18@example.com>"]
readme = "README.md"
packages = [{ include = "bookstore" }]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.4,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
