[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Davi Silva de Deus <davisilvadedeus18@example.com>"]
readme = "README.md"
packages = [{ include = "bookstore" }]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.4,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.3.0"
python-decouple = "^3.7"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
autopep8 = "^2.3.2"
mypy = "^1.17.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
